# bofrak

./: .gitignore  CMakeLists.txt  README.md  bofrak.cpp  bofrak.hpp  main.cpp
objects/: camera.cpp  camera.hpp  definitions.hpp  fractal.cpp  fractal.hpp
resources/: Bofrak_Settings.ini  Info.plist  bofrak.rc
resources/shaders/: bofrak.vs  julia.fs  out_mandelbrot.fs
settings/: configutils.cpp  configutils.hpp  settings.cpp  settings.hpp  settingsstructs.hpp
ui/: uimanager.cpp  uimanager.hpp
utilities/gl/: glincludes.hpp  glutils.cpp  glutils.hpp
utilities/input/: controls.cpp  controls.hpp
